tests/asm-link/negative-macro-args/rgbasm.err
error: macro argument #0 doesn't exist
    ╭─[ test.asm:7:18 ]
    │
  7 │     println "{d:i}: \<i> == \<0>"
    │                     ──┬─  
    │                       ╰─── this reference is invalid
    │ 
 21 │ mac A, B, C, D, E, F, G
    │ ─┬─  
    │  ╰─── macro called here
    │ 
    │ Help: macro arguments are 1-indexed: the first macro argument is `\1`
────╯
error: macro argument #0 doesn't exist
    ╭─[ test.asm:7:26 ]
    │
  7 │     println "{d:i}: \<i> == \<0>"
    │                             ──┬─  
    │                               ╰─── this reference is invalid
    │ 
 21 │ mac A, B, C, D, E, F, G
    │ ─┬─  
    │  ╰─── macro called here
    │ 
    │ Help: macro arguments are 1-indexed: the first macro argument is `\1`
────╯
error: macro argument #-8 doesn't exist
    ╭─[ test.asm:9:18 ]
    │
  9 │     println "{d:i}: \<i> == \<-8>"
    │                     ──┬─  
    │                       ╰─── 7 macro arguments are available
    │ 
 21 │ mac A, B, C, D, E, F, G
    │ ─┬─  
    │  ╰─── macro called here
────╯
error: macro argument #-8 doesn't exist
    ╭─[ test.asm:9:26 ]
    │
  9 │     println "{d:i}: \<i> == \<-8>"
    │                             ──┬──  
    │                               ╰──── 7 macro arguments are available
    │ 
 21 │ mac A, B, C, D, E, F, G
    │ ─┬─  
    │  ╰─── macro called here
────╯
error: macro argument #2147483647 doesn't exist
    ╭─[ test.asm:11:18 ]
    │
 11 │     println "{d:i}: \<i> == \<2147483647>"
    │                     ──┬─  
    │                       ╰─── 7 macro arguments are available
    │ 
 21 │ mac A, B, C, D, E, F, G
    │ ─┬─  
    │  ╰─── macro called here
────╯
error: macro argument #2147483647 doesn't exist
    ╭─[ test.asm:11:26 ]
    │
 11 │     println "{d:i}: \<i> == \<2147483647>"
    │                             ──────┬──────  
    │                                   ╰──────── 7 macro arguments are available
    │ 
 21 │ mac A, B, C, D, E, F, G
    │ ─┬─  
    │  ╰─── macro called here
────╯
error: macro argument #-2147483648 doesn't exist
    ╭─[ test.asm:14:18 ]
    │
 14 │     println "{d:i}: \<i> == \<-2147483648>"
    │                     ──┬─  
    │                       ╰─── 7 macro arguments are available
    │ 
 21 │ mac A, B, C, D, E, F, G
    │ ─┬─  
    │  ╰─── macro called here
────╯
error: macro argument #-2147483648 doesn't exist
    ╭─[ test.asm:14:26 ]
    │
 14 │     println "{d:i}: \<i> == \<-2147483648>"
    │                             ───────┬──────  
    │                                    ╰──────── 7 macro arguments are available
    │ 
 21 │ mac A, B, C, D, E, F, G
    │ ─┬─  
    │  ╰─── macro called here
────╯
error: macro argument #-2147483648 doesn't exist
    ╭─[ test.asm:15:18 ]
    │
 15 │     println "{u:i}: \<i> == \<2147483648>"
    │                     ──┬─  
    │                       ╰─── 7 macro arguments are available
    │ 
 21 │ mac A, B, C, D, E, F, G
    │ ─┬─  
    │  ╰─── macro called here
────╯
error: macro argument #2147483648 doesn't exist
    ╭─[ test.asm:15:26 ]
    │
 15 │     println "{u:i}: \<i> == \<2147483648>"
    │                             ──────┬──────  
    │                                   ╰──────── 7 macro arguments are available
    │ 
 21 │ mac A, B, C, D, E, F, G
    │ ─┬─  
    │  ╰─── macro called here
────╯
error: macro argument #4294967295 doesn't exist
    ╭─[ test.asm:18:26 ]
    │
 18 │     println "{u:i}: \<i> == \<4294967295>"
    │                             ──────┬──────  
    │                                   ╰──────── 7 macro arguments are available
    │ 
 21 │ mac A, B, C, D, E, F, G
    │ ─┬─  
    │  ╰─── macro called here
────╯
11 errors generated.
